[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prostata"
version = "0.1.0"
description = "A Python library for prostate-related calculations"
authors = [{name = "merlos", email = "merlos@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/merlos/prostata"
Repository = "https://github.com/merlos/prostata"
Issues = "https://github.com/merlos/prostata/issues"