[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prostata"
version = "0.1.0"
description = "A Python library for tracking statistics with timers, counters, ratios, and attributes"
authors = [{name = "merlos", email = "merlos@example.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/merlos/prostata"
Repository = "https://github.com/merlos/prostata"
Issues = "https://github.com/merlos/prostata/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]